Uso de storage, arrays, operador ternario

--- a/libro.html
+++ b/libro.html
@@ -1,6 +1,6 @@
 <!-- LIBRO -->
 
-<div class="m-3 bg-secondary p-5">
+<div class="m-3 bg-secondary m-5 p-5 border-top border-5 border-dark">
   <div class="mb-3">
     <label for="formGroupResultadoInput" class="form-label"
       >Ingrese cantidad de paginas</label
